--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Awak Kapal P3RI</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Dear Halizaa</title>
   
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     
@@ -30,7 +31,7 @@
           <a id="min" class="button" href="#"></a>
           <a id="max" class="button" href="#"></a>
         </div>
-        <span class="title">Teruntuk Kalian Semua</span></div>
+        <span class="title">Seutas kata dariku untukmu</span></div>
       <div class="message">
         <span class='prompt'><span class='user'>root</span><span class="at">@</span><span class="path">message</span>~<span class="caret">$</span> </span>
         <span class="typed"></span>
@@ -47,28 +48,53 @@
 <script src='https://cdnjs.cloudflare.com/ajax/libs/typed.js/1.1.1/typed.min.js'></script>
 
 <style>
-/* ... CSS LENGKAP KAMU TETAP DI SINI ... */
-#four-oh-four img.bg { -webkit-filter: grayscale(50%); filter: grayscale(50%); position: absolute; background-image: url(https://laughinggeek.files.wordpress.com/2017/06/lightbulb.gif); background-color: #991678b5; background-position: center center; background-size: 100% 100%; width: 100%; height: 110%; top: 0; -webkit-transform: rotate(180deg); transform: rotate(180deg); z-index: -999; } #four-oh-four #error-container .overlay { position: center; background-color: #000; width: 100%; height: 110%; top: -20; opacity: 0.3; } #four-oh-four .terminal { position: relative; background: rgba(38, 38, 38, 0.8); width: 80%; height: 55vh; border-radius: 8px; box-shadow: 0 1px 10px rgba(0, 0, 0, 0.55); margin: 20vh auto; } #four-oh-four .terminal .window-title { background: linear-gradient(top, #dedede, #c0c0c0); width: calc(100% - 16px); height: 5%; text-align: center; border-top-left-radius: 8px; border-top-right-radius: 8px; padding: 1px 8px; } #four-oh-four .terminal .window-title .win-buttons { position: relative; width: 15%; left: -15px; float: left; margin: 0; } #four-oh-four .terminal .window-title .button { display: inline-block; text-align: center; width: 10px; height: 10px; border: 0.5px solid; border-radius: 100px; vertical-align: middle; margin: 3px 2px 3px 0; } #four-oh-four .terminal .window-title #close { background: #e25544; border-color: #d84b3a; } #four-oh-four .terminal .window-title #min { background: #f5b640; border-color: #e0a12b; } #four-oh-four .terminal .window-title #max { background: #7cb058; border-color: #6fa44b; } #four-oh-four .terminal .title { position: relative; display: inline-block; color: #ffffff; font-weight: 350; letter-spacing: 0.06em; text-align: center; vertical-align: middle; top: 0.5px; left: -43px; } #four-oh-four .terminal .prompt { font-size: 108%; } #four-oh-four .terminal .user { color: #ea7e7d; letter-spacing: 0.002em; padding-right: 3px; } #four-oh-four .terminal .at { color: #e8d880; padding-right: 2px; } #four-oh-four .terminal .path { color: #7ecdcb; letter-spacing: 0.002em; padding-right: 2px; } #four-oh-four .terminal .caret { color: #50cd70; } #four-oh-four .message { position: relative; color: rgba(255, 255, 255, 0.75); font-family: "Source Code Pro", monospace; width: 80%; margin: auto; padding: 1.5vh 0 0; z-index: 999; } #four-oh-four .message span { font-size: 90%; font-weight: 300; line-height: 1.5; letter-spacing: 0.045em; margin-bottom: 1em; } #four-oh-four .message span a { font-family: "Source Code Pro", monospace; border-bottom: 1px dotted rgba(255, 255, 255, 0.75); } #four-oh-four .message form input { background: transparent; border: none; outline: none; caret-color: #50cd70; } #four-oh-four .message form input:focus { color: rgba(255, 255, 255, 0.75); } #four-oh-four .message .typed-cursor { color: rgba(255, 255, 255, 0.9); } #four-oh-four a { color: rgba(255, 255, 255, 0.7); text-decoration: love; } #four-oh-four a:hover { color: rgba(255, 255, 255, 0.9); border-bottom: 1px dotted rgba(255, 255, 255, 0.9); }
+/* ... CSS lainnya tidak berubah ... */
+#four-oh-four img.bg { -webkit-filter: grayscale(50%); filter: grayscale(50%); position: absolute; background-image: url(https://laughinggeek.files.wordpress.com/2017/06/lightbulb.gif); background-color: #991678b5; background-position: center center; background-size: 100% 100%; width: 100%; height: 110%; top: 0; -webkit-transform: rotate(180deg); transform: rotate(180deg); z-index: -999; } #four-oh-four #error-container .overlay { position: center; background-color: #000; width: 100%; height: 110%; top: -20; opacity: 0.3; } #four-oh-four .terminal { position: relative; background: rgba(38, 38, 38, 0.8); width: 80%; height: 55vh; border-radius: 8px; box-shadow: 0 1px 10px rgba(0, 0, 0, 0.55); margin: 20vh auto; } #four-oh-four .terminal .window-title { background: linear-gradient(top, #dedede, #c0c0c0); width: calc(100% - 16px); height: 5%; text-align: center; border-top-left-radius: 8px; border-top-right-radius: 8px; padding: 1px 8px; } #four-oh-four .terminal .window-title .win-buttons { position: relative; width: 15%; left: -15px; float: left; margin: 0; } #four-oh-four .terminal .window-title .button { display: inline-block; text-align: center; width: 10px; height: 10px; border: 0.5px solid; border-radius: 100px; vertical-align: middle; margin: 3px 2px 3px 0; } #four-oh-four .terminal .window-title #close { background: #e25544; border-color: #d84b3a; } #four-oh-four .terminal .window-title #min { background: #f5b640; border-color: #e0a12b; } #four-oh-four .terminal .window-title #max { background: #7cb058; border-color: #6fa44b; } #four-oh-four .terminal .title { position: relative; display: inline-block; color: #ffffff; font-weight: 350; letter-spacing: 0.06em; text-align: center; vertical-align: middle; top: 0.5px; left: -43px; } #four-oh-four .terminal .prompt { font-size: 108%; } #four-oh-four .terminal .user { color: #ea7e7d; letter-spacing: 0.002em; padding-right: 3px; } #four-oh-four .terminal .at { color: #e8d880; padding-right: 2px; } #four-oh-four .terminal .path { color: #7ecdcb; letter-spacing: 0.002em; padding-right: 2px; } #four-oh-four .terminal .caret { color: #50cd70; }
+
+/* PERUBAHAN ADA DI SINI */
+#four-oh-four .message {
+  position: relative;
+  color: rgba(255, 255, 255, 0.75);
+  font-family: "Source Code Pro", monospace;
+  width: 80%;
+  margin: auto;
+  padding: 1.5vh 15px 0 0;
+  z-index: 999;
+  height: 85%; /* BARIS BARU */
+  overflow-y: auto; /* BARIS BARU */
+}
+
+#four-oh-four .message span { font-size: 90%; font-weight: 300; line-height: 1.5; letter-spacing: 0.045em; margin-bottom: 1em; } #four-oh-four .message span a { font-family: "Source Code Pro", monospace; border-bottom: 1px dotted rgba(255, 255, 255, 0.75); } #four-oh-four .message form input { background: transparent; border: none; outline: none; caret-color: #50cd70; } #four-oh-four .message form input:focus { color: rgba(255, 255, 255, 0.75); } #four-oh-four .message .typed-cursor { color: rgba(255, 255, 255, 0.9); } #four-oh-four a { color: rgba(255, 255, 255, 0.7); text-decoration: love; } #four-oh-four a:hover { color: rgba(255, 255, 255, 0.9); border-bottom: 1px dotted rgba(255, 255, 255, 0.9); }
 </style>
 
 <script type="text/javascript">
-// 3. KODE ANIMASI DIJADIKAN SEBUAH FUNGSI
 function animationTimeline() {
     $(function() {
       $(".typed").typed({
         strings: [
-          "Hallo Awak Kapal Semua!! <br/><br>" + 
-          "~<span class='caret'></span> Taqabbalallahu minna wa minkum, mohon maaf lahir dan batin! 🌙✨<br/> ^1" +
-          "~<span class='caret'></span>  Alhamdulillah, kita sudah melewati Ramadhan dengan penuh berkah dan kini menyambut hari kemenangan. Di momen yang suci ini, kami ingin mengucapkan terima kasih yang sebesar-besarnya atas semua pengorbanan, kerja keras, dan kebersamaan yang telah kalian berikan! 💖🙏<br/> ^500" +
-          "~<span class='caret'></span> Kami di sini ingin memberikan apresiasi dan terima kasih kepada semua panitia dan volunteer! Makasiihh guys atas semua pengorbanan tenaga, waktu, dan capeknya jiwa raga kaliann🥹🫶<br/> ^1000" +
-          "~<span class='caret'></span> Selamat buat Departemen Ramadhan yang telah menyelesaikan tugas-tugasnya dengan sangat baik! Apresiasi sebesar-besarnya untuk kalian semua!🤩🎉 Mulai dari Ramadhan Day Care yang senantiasa menjaga, bermain, dan mengajar adik-adik dengan sepenuh hati.🧸👦 IRAMA yang selalu membuat waktu ngabuburit lebih berarti dan penuh inspirasi.📖 Berbuka dan Takjil yang sudah menyiapkan ribuan makanan untuk jamaah tiap harinya.🍱🤤 Tarawih yang sudah mengatur shalat tarawih dengan tertib dan mengundang pembicara-pembicara yang keren-keren.🕌📢 I’tikaf serta Ied yang telah menyiapkan i’tikaf untuk berburu Lailatul Qadr dan menyiapkan shalat Ied untuk menyambut Idul Fitri.🌙🤲 Festram yang sudah membuat acara yang sangat-sangat seru dan bermanfaat. 🎊🎤PPA yang telah membuat kegiatan bermanfaat dan menemani para pejuang Al-Qur’an di Ramadhan tahun ini.🤍<br/> ^1000" +
-          "~<span class='caret'></span> Terima kasih juga untuk departemen support system yang berjuang meramaikan Ramadhan!🎨🌍 Apresiasi untuk Media yang telah membuat dekorasi untuk memeriahkan Ramadhan, mendokumentasikan seluruh kegiatan, melakukan editing, dan memposting konten-konten Ramadhan.📸✨ Apresiasi juga untuk Zero Waste yang menjaga lingkungan tetap bersih, serta Technical Support yang sudah membantu kegiatan Ramadhan terkait hal-hal teknis.🔧💻<br/> ^1000" +
-          "~<span class='caret'></span> Terima kasih banyak juga pada semua pihak yang sama-sama berjuang di balik layar: MSDM yang bantu mengolah data jamaah, data volunteer, sampai panitia jugaa!🗂🤗 Kesekjenan yang telah udah banyak menerbitkan banyak surat, sertifikat, serta mengelola keuangan!📑💰 Finance yang juga bergelut di keuangan serta merch-merch kita yang kece ituuu!💸😎 Sekali lagi, terima kasih banyakk buat semua pihak yang terlibatt!😍💐 Semoga usaha kita menjadi ladang pahala yang akan berbuah kebaikan serta diberkahi Allah SWT. Aamiin!🤲✨<a href='#'></a>"
+          "Haii kamu baik-baik aja kan😊 <br/><br>^1500" + 
+          "~<span class='caret'></span> Maafkan aku belum bisa menjadi apa yang kau mau, aku sendiri tidak tahu ini cinta atau kesepian belaka, tapi anehnya aku tak mau kehilanganmu pergi, aku hanya takut akan adhesi yang hadir tanpa permisi<br/> ^1500" +
+          "~<span class='caret'></span> <br/>" +
+          "~<span class='caret'></span> Dengan apa yang sudah terjadi kita tahu banyak kompromi yang dilewati<br/> ^500" +
+          "~<span class='caret'></span>  Namun aku takkan pernah memutus koneksi ini<br/> ^500" +
+          "~<span class='caret'></span>  Jangan menyiksa dirimu dengan berpura-pura melupakanku<br/> ^500" +
+          "~<span class='caret'></span> Ceritakan saja apa masalahmu, aku takkan merasa sakit hati jika dirimu jujur<br/> ^500" +
+          "~<span class='caret'></span> Justru aku kan merasa bahagia jika kamu bahagia<br/> ^1500" +
+          "~<span class='caret'></span> <br/> " +
+          "~<span class='caret'></span> Kehilangan dan kenangan adalah hal biasa yang terjadi dalam hidup ini<br/> ^500" +
+          "~<span class='caret'></span> Seperti makna lagu yang kau dengar ini, manusia akan selalu menghadapi perubahan, dan rasa keterasingan<br/> ^500" +
+          "~<span class='caret'></span> Namun pada akhirnya mampu menemukan kekuatan dalam cinta dan penerimaan<br/> ^500" +
+          "~<span class='caret'></span> Lagu ini menggambarkan perasaan terperangkap dalam kenangan, namun juga menjadi pengingat bahwa setiap pengalaman membentuk kekuatan dan identitas seseorang<br/> ^500" +
+          "~<span class='caret'></span> <br/> ^500" +
+          "~<span class='caret'></span> <br/> ^500" +
+          "~<span class='caret'></span> <br/> ^500" +
+          "~<span class='caret'></span> <br/> ^500" +
+          "~<span class='caret'></span> <a href='#'></a>"
         ],
         showCursor: true,
         cursorChar: '_',
         autoInsertCss: true,
-        typeSpeed: -30,
+        typeSpeed: 30,
         startDelay: 0,
         loop: false,
         showCursor: false,
@@ -84,7 +110,6 @@ function animationTimeline() {
 }
 
 
-// KODE SWEETALERT2 KAMU DITERAPKAN DI SINI
 window.addEventListener('load', () => {
     Swal.fire({
         title: 'Tolong klik Yes buat memutar lagu',
@@ -107,5 +132,3 @@ window.addEventListener('load', () => {
 </script>
 </body>
 </html>
-
-
