--- a/index.html
+++ b/index.html
@@ -72,19 +72,17 @@ function animationTimeline() {
     $(function() {
       $(".typed").typed({
         strings: [
-          "Haii kamu baik-baik aja kan😊 <br/><br>^1500" + 
-          "~<span class='caret'></span> Maafkan aku belum bisa menjadi apa yang kau mau, aku sendiri tidak tahu ini cinta atau kesepian belaka, tapi anehnya aku tak mau kehilanganmu pergi, aku hanya takut akan adhesi yang hadir tanpa permisi<br/> ^1500" +
+          "Haii Lizaa kamu baik-baik aja kan😊 <br/><br>^2000" + 
+          "~<span class='caret'></span> Maaf cuma ini yang bisa aku beri, tidak sebanyak apa yang kau hadiahi<br/> ^1000" +
+          "~<span class='caret'></span> Terimakasih banyak atas semua hal yang kau beri<br/> ^1000" +
+          "~<span class='caret'></span> Pemberianmu sungguh berarti, bukan hanya cendramata yang sia-sia<br/> ^1000" +
+          "~<span class='caret'></span> Maaf ku belum bisa membalasnya, aku bukan priyayi yang bisa memberi apa yang kau ingini<br/> ^1000" +
+          "~<span class='caret'></span> Semoga apa yang kau beri berbalas rezeki bukan penyesalan tak berarti<br/> ^1000" +
+          "~<span class='caret'></span> Bukan aku tak tahu cara balas budi, namun ketahui bahwa aku sungguh sangat ingin memberi lebih dari yang kau hadiahi<br/> ^1000" +
           "~<span class='caret'></span> <br/>" +
-          "~<span class='caret'></span> Dengan apa yang sudah terjadi kita tahu banyak kompromi yang dilewati<br/> ^500" +
-          "~<span class='caret'></span>  Namun aku takkan pernah memutus koneksi ini<br/> ^500" +
-          "~<span class='caret'></span>  Jangan menyiksa dirimu dengan berpura-pura melupakanku<br/> ^500" +
-          "~<span class='caret'></span> Ceritakan saja apa masalahmu, aku takkan merasa sakit hati jika dirimu jujur<br/> ^500" +
-          "~<span class='caret'></span> Justru aku kan merasa bahagia jika kamu bahagia<br/> ^1500" +
-          "~<span class='caret'></span> <br/> " +
-          "~<span class='caret'></span> Kehilangan dan kenangan adalah hal biasa yang terjadi dalam hidup ini<br/> ^500" +
-          "~<span class='caret'></span> Seperti makna lagu yang kau dengar ini, manusia akan selalu menghadapi perubahan, dan rasa keterasingan<br/> ^500" +
-          "~<span class='caret'></span> Namun pada akhirnya mampu menemukan kekuatan dalam cinta dan penerimaan<br/> ^500" +
-          "~<span class='caret'></span> Lagu ini menggambarkan perasaan terperangkap dalam kenangan, namun juga menjadi pengingat bahwa setiap pengalaman membentuk kekuatan dan identitas seseorang<br/> ^500" +
+          "~<span class='caret'></span> (Kamu scroll sendiri ke bawah ya, aku gabisa bikin fitur autoscroll wkwk)<br/> ^1000" +
+          "~<span class='caret'></span> <br/>" +
+          "~<span class='caret'></span> <br/> ^1000" +
           "~<span class='caret'></span> <br/> ^500" +
           "~<span class='caret'></span> <br/> ^500" +
           "~<span class='caret'></span> <br/> ^500" +
