--- a/index.html
+++ b/index.html
@@ -77,22 +77,35 @@ function animationTimeline() {
           "~<span class='caret'></span> Terimakasih banyak atas semua hal yang kau beri<br/> ^1000" +
           "~<span class='caret'></span> Pemberianmu sungguh berarti, bukan hanya cendramata yang sia-sia<br/> ^1000" +
           "~<span class='caret'></span> Maaf ku belum bisa membalasnya, aku bukan priyayi yang bisa memberi apa yang kau ingini<br/> ^1000" +
+          "~<span class='caret'></span> (Kamu scroll sendiri ke bawah ya, aku gabisa bikin fitur autoscrollnya wkwk😂)<br/> ^1000" +
           "~<span class='caret'></span> Semoga apa yang kau beri berbalas rezeki bukan penyesalan tak berarti<br/> ^1000" +
-          "~<span class='caret'></span> Bukan aku tak tahu cara balas budi, namun ketahui bahwa aku sungguh sangat ingin memberi lebih dari yang kau hadiahi<br/> ^1000" +
+          "~<span class='caret'></span> Bukan aku tak tahu cara balas budi, namun ketahui bahwa aku sungguh sangat ingin memberi lebih dari yang kau hadiahi<br/> ^1500" +
           "~<span class='caret'></span> <br/>" +
-          "~<span class='caret'></span> (Kamu scroll sendiri ke bawah ya, aku gabisa bikin fitur autoscroll wkwk)<br/> ^1000" +
+          "~<span class='caret'></span> Maafkan aku belum bisa menjadi apa yang kau mau<br/> ^1000" +
+          "~<span class='caret'></span> Kesempurnaan hanyalah milik Tuhan, Jangan sandarkan kebahagiaan kepada makhluk yang tak memiliki kekuatan<br/> ^1000" +
+          "~<span class='caret'></span> Aku sendiri tidak tahu ini cinta atau kesepian belaka, tapi anehnya aku tak mau kehilanganmu pergi, aku hanya takut akan adhesi yang hadir tanpa permisi<br/> ^1500" +
           "~<span class='caret'></span> <br/>" +
-          "~<span class='caret'></span> <br/> ^1000" +
-          "~<span class='caret'></span> <br/> ^500" +
-          "~<span class='caret'></span> <br/> ^500" +
-          "~<span class='caret'></span> <br/> ^500" +
-          "~<span class='caret'></span> <br/> ^500" +
+          "~<span class='caret'></span> Dengan apa yang sudah terjadi kita tahu banyak kompromi yang dilewati, Namun aku takkan pernah memutus koneksi ini<br/> ^1000" +
+          "~<span class='caret'></span> Jangan menyiksa dirimu dengan berpura-pura melupakanku<br/> ^1000" +
+          "~<span class='caret'></span> Ceritakan saja apa masalahmu, aku takkan merasa sakit hati jika dirimu jujur, Justru aku kan merasa bahagia jika kamu bahagia<br/> ^1500" +
+          "~<span class='caret'></span> <br/>" +
+          "~<span class='caret'></span> Kehilangan dan kenangan adalah hal biasa yang terjadi dalam hidup ini<br/> ^1000" +
+          "~<span class='caret'></span> Seperti makna lagu yang kau dengar ini, manusia akan selalu menghadapi perubahan, dan rasa keterasingan<br/> ^1000" +
+          "~<span class='caret'></span> Namun pada akhirnya mampu menemukan kekuatan dalam cinta dan penerimaan<br/> ^1000" +
+          "~<span class='caret'></span> Lagu ini menggambarkan perasaan terperangkap dalam kenangan, namun juga menjadi pengingat bahwa setiap pengalaman membentuk kekuatan dan identitas seseorang<br/> ^1500" +
+          "~<span class='caret'></span> <br/>" +
+          "~<span class='caret'></span> Kuharap kau menemukan kebahagiaan sejati bukan cinta yang tak berarti<br/> ^1000" +
+          "~<span class='caret'></span> Pertemuan dan perpisahan datang silih berganti, itulah perjalanan kehidupan<br/> ^1000" +
+          "~<span class='caret'></span> Di setiap momen akan ada kenangan, tinggal bagaimana kita mengambil pelajaran<br/> ^1000" +
+          "~<span class='caret'></span> Ku kan memberikan dukungan untukmu menjadi seseorang yang bertumbuh, bersemi, dan bermekaran<br/> ^1000" +
+          "~<span class='caret'></span> Jadilah wanita kuat dan tangguh, janganlah kau mudah bersedih dan rapuh<br/> ^1000" +
+          "~<span class='caret'></span> Dunia ini tak selalu berjalan sesuai yang kau mau, Bangkitlah dari kesedihan yang kau ampu<br/> ^1000" +
           "~<span class='caret'></span> <a href='#'></a>"
         ],
         showCursor: true,
         cursorChar: '_',
         autoInsertCss: true,
-        typeSpeed: 30,
+        typeSpeed: 20,
         startDelay: 0,
         loop: false,
         showCursor: false,
@@ -110,7 +123,7 @@ function animationTimeline() {
 
 window.addEventListener('load', () => {
     Swal.fire({
-        title: 'Tolong klik Yes buat memutar lagu',
+        title: 'Tolong klik Yes buat muter lagunya',
         icon: 'warning',
         showCancelButton: true,
         confirmButtonColor: '#3085d6',
